fixed spacing

--- a/styles/loginPage.css
+++ b/styles/loginPage.css
@@ -9,7 +9,7 @@
 }
 .box{
     max-height:100%;
-    height:25%;
+    height:27%;
     max-width: 500px;
     width:100%;
     /* height:250px; */
@@ -17,6 +17,9 @@
     margin:auto;
     margin-top:10rem;
     margin-bottom:auto;
+}
+input{
+    margin-bottom: 8px!important;
 }
 
 .button{
