--- a/styles/signupPage.css
+++ b/styles/signupPage.css
@@ -8,7 +8,7 @@
 }
 .box{
     max-height:100%;
-    height:48%;
+    height:52%;
     max-width: 500px;
     width:100%;
     /* height:250px; */
@@ -16,6 +16,9 @@
     margin:auto;
     margin-top:10rem;
     margin-bottom:auto;
+}
+input{
+    margin-bottom: 8px!important;
 }
 
 .button{
